# nexus

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Nexus_Investor_Deck.pptx  PLAN.md  README.md  build_deck.py  context-management-report.md  docker-compose.override.yml  docker-compose.yml  install.sh  vocals.json  vocals.srt  vocals.tsv  vocals.txt  vocals.vtt
agent/: pyproject.toml
agent/scripts/: cleanup_graphrag_junk.py
agent/src/nexus/: __init__.py  _vault_datatable_core.py  alarm_store.py  calendar_runtime.py  cli.py  config.py  config_file.py  config_schema.py  daemon.py  error_classifier.py  features.py  heartbeat_log.py  home.py  i18n.py  insights.py  kanban.py  location.py  main.py  mcp_lifecycle.py  multimodal.py  ocr.py  ocr_server.py  redact.py  retry.py  secrets.py  secrets_substitute.py  sqlite_base.py  trajectory.py  usage_pricing.py  vault.py  vault_csv.py  vault_dashboard.py  vault_dashboard_skill.py  vault_datatable.py  vault_datatable_index.py  vault_datatable_materialize.py  vault_datatable_rows.py  vault_datatable_schema.py  vault_formula.py  vault_graph.py  (+11 more)
agent/src/nexus/agent/: __init__.py  _loom_bridge.py  ask_user_schema.py  ask_user_tool.py  builtin_embedder.py  builtin_extractor.py  context.py  form_schema.py  graphrag_manager.py  image_gen.py  llm.py  loop.py  memory.py  model_profiles.py  notify_user_schema.py  notify_user_tool.py  ontology_store.py  planner.py  planner_prompt.py  prompt_builder.py  registry.py  router.py  terminal_tool.py
agent/src/nexus/agent/_loom_bridge/: __init__.py  adapter.py  message.py  registry.py
agent/src/nexus/agent/builtin_extractor/: __init__.py  _constants.py  _extractor.py  _helpers.py
agent/src/nexus/agent/folder_graph/: __init__.py  _engine_pool.py  _indexer.py  _queries.py  _scanner.py  _stale.py  _storage.py  _tabs_state.py  _wizard.py
agent/src/nexus/agent/graphrag_manager/: __init__.py  _indexer.py  _manifest.py  _resolvers.py
agent/src/nexus/agent/llm/: __init__.py  _payload.py  anthropic.py  auth.py  bedrock.py  openai.py  types.py
agent/src/nexus/agent/loop/: __init__.py  _builder.py  agent.py  budget.py  retry.py  (+10 more)
agent/src/nexus/auth/: __init__.py  nexus_account.py  status_watcher.py
agent/src/nexus/broker/: __init__.py  client.py  crypto.py  models.py  poller.py  provision.py  registry.py  sync.py
agent/src/nexus/cli/: __init__.py  backup_cmd.py  chat.py  config_cmd.py  cookies_cmd.py  daemon_cmd.py  doctor_cmd.py  graphrag_cmd.py  insights_cmd.py  models_cmd.py  providers_cmd.py  routing_cmd.py  serve.py  sessions_cmd.py  skills_cmd.py  trajectories_cmd.py  tunnel_cmd.py  users_cmd.py  vault_cmd.py
agent/src/nexus/daemon/: __init__.py  _display.py  installer.py  manager.py
agent/src/nexus/dream/: __init__.py  _shared.py  consolidate.py  engine.py  insight.py  journal.py  rehearse.py  skill_refine.py  state.py
agent/src/nexus/heartbeat_drivers/: __init__.py
agent/src/nexus/insights/: __init__.py  _queries.py  engine.py  helpers.py  terminal.py
agent/src/nexus/local_llm/: __init__.py  binary_update.py  downloader.py  hardware.py  hf_search.py  manager.py
agent/src/nexus/locales/: en.toml  pt-BR.toml
agent/src/nexus/mcp_resources/: __init__.py  dashboard.py  data_table.py  kanban.py
agent/src/nexus/providers/: __init__.py  catalog.json  catalog.py
agent/src/nexus/push/: __init__.py  keys.py  sender.py
agent/src/nexus/server/: __init__.py  app.py  app_lifespan.py  app_subagents.py  auth.py  deps.py  event_bus.py  events.py  graph.py  job_tracker.py  kanban_queue.py  middleware.py  permissions.py  project_store.py  schemas.py  session.py  session_store.py  settings.py  transcribe.py
agent/src/nexus/skills/: __init__.py  discovery.py  external_sources.json  guard.py  manager.py  registry.py  types.py  venv_manager.py
agent/src/nexus/tools/: _sandbox.py  acp_call.py  acp_device.py  calendar_tool.py  context_tool.py  csv_tool.py  dashboard_tool.py  datatable_tool.py  dispatch_card_tool.py  heartbeat_tool.py  http_call.py  image_gen_tool.py  kanban_query_tool.py  kanban_tool.py  memory_tool.py  nexus_kb.py  ocr_tool.py  ontology_tool.py  show_dashboard_widget_tool.py  show_data_table_tool.py  show_kanban_tool.py  state_tool.py  subagent_tool.py  vault_tool.py  visualize_tool.py
agent/src/nexus/tts/: __init__.py  ack_prompts.toml  base.py  dispatch.py  normalize.py  piper.py  voice_setup.py
agent/src/nexus/tunnel/: __init__.py  cloudflared_provider.py  manager.py  ngrok_provider.py
agent/src/nexus/vault_calendar/: __init__.py  bootstrap.py  calendars.py  events.py  models.py  parser.py  recurrence.py
agent/src/nexus/vault_graph/: __init__.py  _entities.py  builder.py  cache.py  parser.py  scoped.py  types.py
agent/src/nexus/vault_kanban/: __init__.py  boards.py  cards.py  hooks.py  lanes.py  models.py  parser.py
agent/src/nexus/workflows/: cache.py  engine.py  expressions.py  models.py  parser.py  schema.py  store.py
agent/tests/: conftest.py  test_acp_call_gating.py  test_alarm_system.py  test_anthropic_oauth_headers.py  test_ask_user.py  test_ask_user_secret_redaction.py  test_auth.py  test_auth_strategy.py  test_backup_cmd.py  test_bedrock_provider.py  test_budget_enforcement.py  test_builtin_embedder.py  test_calendar_trigger_driver.py  test_catalog_route.py  test_chandra_ocr_live.py  test_compact_endpoint.py  test_compact_history.py  test_compact_slash.py  test_credentials_routes.py  test_csv_tool.py  test_dashboard_run_operation.py  test_dispatch_card_tool.py  test_dispatch_chain_guard.py  test_dispatch_follow_up.py  test_dream_consolidate.py  test_dream_insight.py  test_dream_journal.py  test_dream_rehearse.py  test_dream_skill_refine.py  test_dream_state.py  test_folder_graph_engine_pool.py  test_folder_graph_indexer.py  test_folder_graph_stale.py  test_folder_graph_storage.py  test_folder_graph_tabs.py  test_folder_graph_wizard.py  test_graph.py  test_heartbeat_log.py  test_hf_search.py  test_hitl_history.py  (+83 more)
agent/tests/live/: conftest.py  test_anthropic_live.py  test_anthropic_oauth_live.py  test_bedrock_live.py  test_openai_live.py
(+715 files in other folders)
