[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard]>=0.29",
    "openai>=1.50",
    "anthropic>=0.40",
    "tomli_w",
    "psutil>=5.9",
    "python-multipart>=0.0.26",
    "fastembed>=0.4",
    "spacy>=3.8",
    "faster-whisper>=1.0",
    "loom-framework[anthropic,acp,tui,graphrag,search,scrape]",
    "huggingface_hub>=0.24",
    "duckdb>=1.0",
]

[tool.uv.sources]
# Expects the loom repo to sit next to the nexus repo:
#   /some/path/loom
#   /some/path/nexus
# Clone both side-by-side and `uv sync` will pick loom up as an editable
# local install. Adjust if your layout differs.
loom-framework = { path = "../../loom", editable = true }
ddgs = { git = "https://github.com/NinoCoelho/ddgs", branch = "main" }

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
nexus = "nexus.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
# Treat async def tests as asyncio by default so we don't have to
# sprinkle ``@pytest.mark.asyncio`` on every HITL test.
asyncio_mode = "auto"
